# widget_to_image_converter

./: .metadata  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  analysis_options.yaml  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: widget_to_image_converter.podspec
ios/Classes/: widget_to_image_converter.c
lib/: widget_to_image_converter.dart
lib/src/: widget_to_image_converter.dart  widget_to_image_converter_bindings_generated.dart
lib/src/mixin/: convert_to_jpeg_isolate_mixin.dart  convert_to_jpeg_isolate_pool_mixin.dart
lib/src/widget/: widget_to_image_controller.dart  widget_to_image_provider.dart  widget_to_image_wrapper.dart
linux/: CMakeLists.txt
macos/: widget_to_image_converter.podspec
src/: CMakeLists.txt  widget_to_image_converter.c  widget_to_image_converter.h
test/: convert_to_jpeg_isolate_mixin_test.dart  convert_to_jpeg_isolate_pool_mixin_test.dart  widget_to_image_converter_test.dart
windows/: CMakeLists.txt
(+2 files in other folders)
